--- a/CoffeeShopManager/GUI/UserControlProductTab.vi-VN.resx
+++ b/CoffeeShopManager/GUI/UserControlProductTab.vi-VN.resx
@@ -154,6 +154,15 @@
   <data name="btnDelete.Text" xml:space="preserve">
     <value>Xóa</value>
   </data>
+  <data name="cboSearch.Items1" xml:space="preserve">
+    <value>Tên</value>
+  </data>
+  <data name="cboSearch.Items2" xml:space="preserve">
+    <value>Loại</value>
+  </data>
+  <data name="cboSearch.Items3" xml:space="preserve">
+    <value>Giá</value>
+  </data>
   <data name="btnInsert.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
