--- a/CoffeeShopManager/GUI/UserControlSuppliers.vi-VN.resx
+++ b/CoffeeShopManager/GUI/UserControlSuppliers.vi-VN.resx
@@ -124,6 +124,12 @@
   <data name="btnAdd.Text" xml:space="preserve">
     <value>Thêm</value>
   </data>
+  <data name="cboSearch.Items1" xml:space="preserve">
+    <value>Tên</value>
+  </data>
+  <data name="cboSearch.Items3" xml:space="preserve">
+    <value>SĐT</value>
+  </data>
   <data name="btnDelete.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
