--- a/CoffeeShopManager/GUI/UserControlTableOfManager.vi-VN.resx
+++ b/CoffeeShopManager/GUI/UserControlTableOfManager.vi-VN.resx
@@ -117,67 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>221, 34</value>
-  </data>
-  <data name="label1.Text" xml:space="preserve">
-    <value>Danh sách bàn</value>
-  </data>
-  <data name="label3.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 19</value>
-  </data>
-  <data name="label3.Text" xml:space="preserve">
-    <value>Các loại:</value>
-  </data>
-  <data name="btnAll.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="btnAll.Text" xml:space="preserve">
-    <value>Tất cả</value>
-  </data>
-  <data name="btnAvailable.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="btnAvailable.Text" xml:space="preserve">
-    <value>Còn trống</value>
-  </data>
-  <data name="btnOccupied.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="btnOccupied.Text" xml:space="preserve">
-    <value>Đã ngồi</value>
-  </data>
-  <data name="btnUnavailable.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="btnUnavailable.Text" xml:space="preserve">
-    <value>Không dùng được</value>
-  </data>
   <data name="cboBy.Items" xml:space="preserve">
     <value>ID Khách hàng</value>
   </data>
   <data name="cboBy.Items1" xml:space="preserve">
     <value>ID Bàn</value>
   </data>
-  <data name="lblBy.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="lblBy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>47, 19</value>
+    <value>32, 19</value>
   </data>
   <data name="lblBy.Text" xml:space="preserve">
-    <value>Bằng:</value>
-  </data>
-  <data name="lblSearch.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+    <value>Bởi:</value>
   </data>
   <data name="lblSearch.Size" type="System.Drawing.Size, System.Drawing">
     <value>69, 19</value>
@@ -185,13 +136,28 @@
   <data name="lblSearch.Text" xml:space="preserve">
     <value>Tìm kiếm:</value>
   </data>
-  <data name="btnCollapse.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="btnUnavailable.Text" xml:space="preserve">
+    <value>Hư hỏng</value>
   </data>
-  <data name="btnExpand.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="btnOccupied.Text" xml:space="preserve">
+    <value>Đã ngồi</value>
   </data>
-  <data name="btnSearch.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="btnAvailable.Text" xml:space="preserve">
+    <value>Trống</value>
+  </data>
+  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>57, 19</value>
+  </data>
+  <data name="label3.Text" xml:space="preserve">
+    <value>Lọc bởi</value>
+  </data>
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>221, 34</value>
+  </data>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Danh sách bàn</value>
+  </data>
+  <data name="btnAddTable.Text" xml:space="preserve">
+    <value>Thêm bàn</value>
   </data>
 </root>
